# Algorithm

./: CMakeLists.txt  bubbleSort.cpp  fastSort.cpp  insertSort.cpp  insertSortHalf.cpp  insertSortHalf2nd.cpp  mergeSort.cpp
