cmake_minimum_required(VERSION 3.10)
project(testAlgorithm)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
#add_executable(main mergeSort.cpp)
#add_executable(main fastSort.cpp)
#add_executable(main insertSortHalf.cpp)
add_executable(main insertSortHalf2nd.cpp)
#add_executable(main insertSort.cpp)
#add_executable(main bubbleSort.cpp)